--- a/client/src/pages/LoginRegister/styles.css
+++ b/client/src/pages/LoginRegister/styles.css
@@ -4,19 +4,27 @@
 
 }
 
-html, body{
-    height: 100%;
-}
-
-body{
+html{
     background-image: url('../../assets/loginBG.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
+
+}
+
+body{
     overflow: hidden;
 }
+
 h2{
     text-align: center;
 }
+
+p{
+    color: rgb(44, 44, 44);
+}
+
+
 
 .auth-container{
     position: relative;
@@ -29,6 +37,34 @@ h2{
     background-color: beige;
     display: flex;
     animation: 1s ease-in 0s 1 slideInFromTop;
+}
+
+.change-form{
+    position: absolute;
+    bottom: 3%;
+    margin-left: 20%;
+    margin-right: 24%;
+    text-align: center;
+}
+
+.login-register-span{
+    color: rgb(68, 68, 68);
+}
+
+.login-register-span:hover{
+    cursor: pointer;
+    color: rgb(100, 100, 100);
+
+}
+
+.error-message{
+    background-color: rgb(192, 28, 28);
+    color: rgb(209, 195, 195);
+    padding: 5px;
+    position: absolute;
+    top: 5%;
+    border-radius: 3px;
+    transition: 1s ease-in 0s slideInFromTop;
 }
 
 @keyframes slideInFromLeft{
@@ -82,41 +118,6 @@ h2{
     animation: 1s ease-in 0s 1 slideInFromRight;
 }
 
-
-
-
 .auth-form-container button{
     width: 15vw;
-}
-
-.change{
-    position: absolute;
-    bottom: 3%;
-    margin-left: 20%;
-    margin-right: 24%;
-    text-align: center;
-}
-
-p{
-    color: rgb(44, 44, 44);
-}
-
-.login-register-span{
-    color: rgb(68, 68, 68);
-}
-
-.login-register-span:hover{
-    cursor: pointer;
-    color: rgb(100, 100, 100);
-
-}
-
-.error-message{
-    background-color: rgb(192, 28, 28);
-    color: rgb(209, 195, 195);
-    padding: 5px;
-    position: absolute;
-    top: 5%;
-    border-radius: 3px;
-    transition: 1s ease-in 0s slideInFromTop;
 }
